# titans-architecture

./: .gitignore  README.md  Readme.text  Setup.py  directory_structure.txt  generate_initPY.py  generate_structure.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: default_config.yaml
configs/model_configs/: base.yaml  experiment_config.yaml  large.yaml  small.yaml
core/: __init__.py
core/attention/: __init__.py  attention_layer.py  attention_utils.py
core/memory/: __init__.py  memory_utils.py  neural_memory.py  persistent_memory.py
core/models/: __init__.py  mac.py  model_utils.py
data/: __init__.py  dataloader.py  dataset.py  preprocessing.py
inference/: __init__.py  batch_inference.py  memory_management.py  predictor.py
outputs/checkpoints/: checkpoint_meta.json
processed_data/: data_processed.pt
scripts/: __init__.py  evaluate.py  inference.py  run_tests.py  train.py
scripts/utils/: __init__.py  analyze_memory.py  convert_checkpoint.py  interactive_demo.py  prepare_data.py  profile_model.py
tests/: conftest.py  pytest.ini
tests/test_attention/: test_attention_layer.py  test_attention_utils.py
tests/test_memory/: test_memory_utils.py  test_neural_memory.py  test_persistent_memory.py
tests/test_models/: test_mac.py
train_data/: data.txt
training/: __init__.py  loss.py  optimizer.py  trainer.py
utils/: __init__.py  checkpoint.py  config.py  config_loader.py  logging.py  memory_monitor.py  metrics.py  optimization.py
